# maritime_interfaces

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  package.xml
.devcontainer/: devcontainer.json
.github/workflows/: release_private.yaml
maritime_interfaces/engineering/engine/: EngineState.msg
maritime_interfaces/sensors/: CMakeLists.txt  package.xml
maritime_interfaces/sensors/battery/: Battery.msg
maritime_interfaces/sensors/generic/: Pressure.msg  Temperature.msg
maritime_interfaces/support/: CMakeLists.txt
maritime_interfaces/support/shared/: ContainerState.msg  FluidData.msg  GenericSensorData.msg
